--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AirBnB Clone</title>
 </head>
 <body style="margin: 0; padding: 0;">
     <header style="color: #FF0000; height: 70px; width: 100%;"></header>
-    <footer style="color: #00FF00; height: 60px;">
-        <p style="text-align: center;">Best School</p>
+    <footer style="color: #00FF00; height: 60px; width: 100%; text-align: center; position: absolute; bottom: 0; line-height: 60px;">
+        Best School
     </footer>
 </body>
 </html>
