--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -58,11 +58,11 @@
             <div class="articles">
                 <article>
                     <h2>My home</h2>
-                    <div class="price_by_night">$80</div>
+                    <div class="price_by_night"><p>$80</p></div>
                     <div class="information">
-                        <div class="max_guest"></div>
-                        <div class="number_rooms"></div>
-                        <div class="number_bathrooms"></div>
+                        <div class="max_guest"><span>4 Guests</span></div>
+                        <div class="number_rooms"><span>4 Bedrooms</span></div>
+                        <div class="number_bathrooms"><span>2 Bathrooms</span></div>
                     </div>
                     <div class="user">
                         <p><b>Owner:</b>John Lenon</p>
@@ -71,11 +71,11 @@
                 </article>
                 <article>
                     <h2>Tiny house</h2>
-                    <div class="price_by_night">$65</div>
+                    <div class="price_by_night"><p>$65</p></div>
                     <div class="information">
-                        <div class="max_guest"></div>
-                        <div class="number_rooms"></div>
-                        <div class="number_bathrooms"></div>
+                        <div class="max_guest"><span>1 Guests</span></div>
+                        <div class="number_rooms"><span>1 Bedroom</span></div>
+                        <div class="number_bathrooms"><span>1 Bathroom</span></div>
                     </div>
                     <div class="user">
                         <p><b>Owner:</b>John Lenon</p>
@@ -84,11 +84,11 @@
                 </article>
                 <article>
                     <h2>A suite</h2>
-                    <div class="price_by_night">$190</div>
+                    <div class="price_by_night"><p>$190</p></div>
                     <div class="information">
-                        <div class="max_guest"></div>
-                        <div class="number_rooms"></div>
-                        <div class="number_bathrooms"></div>
+                        <div class="max_guest"><span>6 Guests</span></div>
+                        <div class="number_rooms"><span>4 Bedroom</span></div>
+                        <div class="number_bathrooms"><span>4 Bathroom</span></div>
                     </div>
                     <div class="user">
                         <p><b>Owner:</b>John Lenon</p>
